# mantou

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
mantou/: __init__.py  discovery.py  scanner.py  schema.py
mantou/cli/: doctor.py  main.py  rules.py  scan.py
mantou/engine/: dedup.py  evaluator.py  loader.py  runner.py
mantou/finders/: __init__.py  command.py  config.py  filesystem.py  text.py
mantou/rules/: advisories.json  agents.json  channels.json  config.json  filesystem.json  isolation.json  os.json  perms.json  prompts.json  tools-scope.json
mantou/runners/: __init__.py  normalizer.py  tool_runner.py
mantou/runners/adapters/: __init__.py  base.py  doctor.py  security_audit.py  status.py
tests/: conftest.py
tests/fixtures/: SOUL-clean.md  SOUL-with-secret.md  openclaw-insecure.json  openclaw-secure.json
tests/fixtures/tool_output/: doctor-empty.txt  doctor-warnings.txt  security-audit-4crit.txt  security-audit-clean.txt
tests/test_engine/: test_dedup.py  test_evaluator.py  test_loader.py  test_runner.py
tests/test_finders/: test_command.py  test_config.py  test_filesystem.py  test_text.py
tests/test_runners/: test_adapters.py  test_normalizer.py  test_phase2_integration.py  test_tool_runner.py
