[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantou"
version = "0.1.0"
description = "Local-first security posture scanner for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "peeweeh" }]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jsonpath-ng>=1.6",
]

[project.scripts]
mantou = "mantou.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mantou*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
